# input_file_GCS

./: .dockerignore  .gitignore  Dockerfile  requirements.txt  setup.cfg
app/: main.py
